[package]
name = "fluffcoin_platform"
version = "0.1.0"
description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluffcoin_platform"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-sdk = "2.1.0"
solana-program = "1.18.26"
serde_with = "1.14.0"
anchor-lang = "0.30.1"  # Make sure to use the version compatible with your setup
spl-token = "7.0.0"  # Token program
[profile.release]
overflow-checks = true